--- a/usuario.html
+++ b/usuario.html
@@ -40,20 +40,61 @@
     </header>
 
     <main class="container">
-        <section class="login-section">
-            <h2>Iniciar Sesión</h2>
-            <form action="enviar.php" method="post" class="login-form">
-                <div class="form-group">
-                    <label for="email">Correo Electrónico</label>
-                    <input type="email" id="email" name="email" required>
+
+        <section class="contact-section forms-container">
+            <div id="login" class="form-content">
+                <div class="contact-form">
+                    <h2>Inicia Sesión</h2>
+                    <form action="login.php" method="post" class="login-form">
+                        <div class="form-group">
+                            <label>Nombre de usuario
+                                <input name="usuario" type="text" maxlength="12" />
+                            </label><br />
+                        </div>
+                        <div class="form-group">
+                            <label>Contraseña
+                                <input type="password" name="password" maxlength="12" />
+                            </label><br />
+                        </div>
+                        <input class="btn" type="submit" value="Login"/>	
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="btn">Ingresar</button>
-            </form>
-        </section>
+            </div>
+            
+     <section class="contact-section">
+     <div class="contact-form">
+            <h2>Registrate en el sitio</h2>
+    <form action="registro.php" method="post" class="login-form">
+        <div class="form-group">
+    	<label>Nombre
+        	<input type="text" name="nombre" required />
+        </label><br />
+        </div>
+        <div class="form-group">
+		<label>Apellido
+        	<input type="text" name="apellido" required />
+        </label><br />
+        </div>
+        <div class="form-group">
+        <label>Email
+        	<input type="email" name="email" required />
+        </label><br />
+         </div>
+        <div class="form-group">
+        <label>Nombre de usuario
+        	<input name="usuario" type="text" maxlength="12" />
+        </label><br />
+        </div>
+        <div class="form-group">
+        <label>Contraseña
+        	<input type="password" name="password" maxlength="12" />
+        </label><br />
+        </div>
+        <div class="form-group">
+        </div>
+        <input class="btn" type="submit" value="Registrarse"/>	
+    </form>
+   </div>
     </main>
 
     <footer class="footer">
