--- a/contacto.html
+++ b/contacto.html
@@ -80,6 +80,7 @@
         <div class="contact-info">
             <img src="img/sobre.svg" alt="Contacto">
             <p>universo.onirico@gmail.com</p>
+            <p>@2025 Juana Ferretti</p>
         </div>
     </footer>
 
