--- a/artistas.html
+++ b/artistas.html
@@ -148,6 +148,7 @@
         <div class="contact-info">
             <img src="img/sobre.svg" alt="Contacto">
             <p>universo.onirico@gmail.com</p>
+            <p>@2025 Juana Ferretti</p>
         </div>
     </footer>
 
