--- a/influencia.html
+++ b/influencia.html
@@ -103,19 +103,17 @@
         <div class="contact-info">
             <img src="img/sobre.svg" alt="Contacto">
             <p>universo.onirico@gmail.com</p>
+            <p>@2025 Juana Ferretti</p>
         </div>
     </footer>
-
-    <!-- Modal -->
-    <div id="gallery-modal" class="modal">
+    
+   <div id="gallery-modal" class="modal">
         <span class="close-button">&times;</span>
         <div class="modal-content">
             <img class="modal-image" id="modal-img">
             <p class="modal-description" id="modal-desc"></p>
         </div>
     </div>
-
-
 
     <script src="js/main.js" defer></script>
 </body>
