--- a/obras.html
+++ b/obras.html
@@ -145,10 +145,11 @@
         <div class="contact-info">
             <img src="img/sobre.svg" alt="Contacto">
             <p>universo.onirico@gmail.com</p>
+            <p>@2025 Juana Ferretti</p>
         </div>
     </footer>
-
-    <!-- Modal para la galería -->
+    
+<!-- Modal para la galería -->
     <div id="gallery-modal" class="modal">
         <span class="close-button">&times;</span>
         <div class="modal-content">
@@ -156,7 +157,6 @@
             <p class="modal-description" id="modal-desc"></p>
         </div>
     </div>
-
     <script src="js/main.js"></script>
 
 </body>
