--- a/usuario.html
+++ b/usuario.html
@@ -42,59 +42,57 @@
     <main class="container">
 
         <section class="contact-section forms-container">
-            <div id="login" class="form-content">
-                <div class="contact-form">
-                    <h2>Inicia Sesión</h2>
-                    <form action="login.php" method="post" class="login-form">
-                        <div class="form-group">
-                            <label>Nombre de usuario
-                                <input name="usuario" type="text" maxlength="12" />
-                            </label><br />
-                        </div>
-                        <div class="form-group">
-                            <label>Contraseña
-                                <input type="password" name="password" maxlength="12" />
-                            </label><br />
-                        </div>
-                        <input class="btn" type="submit" value="Login"/>	
-                    </form>
-                </div>
+            <div class="contact-form">
+                <h2>Inicia Sesión</h2>
+                <form action="login.php" method="post" class="login-form">
+                    <div class="form-group">
+                        <label>Nombre de usuario
+                            <input name="usuario" type="text" maxlength="12" />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                        <label>Contraseña
+                            <input type="password" name="password" maxlength="12" />
+                        </label><br />
+                    </div>
+                    <input class="btn" type="submit" value="Login"/>	
+                </form>
             </div>
             
-     <section class="contact-section">
-     <div class="contact-form">
-            <h2>Registrate en el sitio</h2>
-    <form action="registro.php" method="post" class="login-form">
-        <div class="form-group">
-    	<label>Nombre
-        	<input type="text" name="nombre" required />
-        </label><br />
-        </div>
-        <div class="form-group">
-		<label>Apellido
-        	<input type="text" name="apellido" required />
-        </label><br />
-        </div>
-        <div class="form-group">
-        <label>Email
-        	<input type="email" name="email" required />
-        </label><br />
-         </div>
-        <div class="form-group">
-        <label>Nombre de usuario
-        	<input name="usuario" type="text" maxlength="12" />
-        </label><br />
-        </div>
-        <div class="form-group">
-        <label>Contraseña
-        	<input type="password" name="password" maxlength="12" />
-        </label><br />
-        </div>
-        <div class="form-group">
-        </div>
-        <input class="btn" type="submit" value="Registrarse"/>	
-    </form>
-   </div>
+            <div class="contact-form">
+                <h2>Registrate en el sitio</h2>
+                <form action="registro.php" method="post" class="login-form">
+                    <div class="form-group">
+                        <label>Nombre
+                            <input type="text" name="nombre" required />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                        <label>Apellido
+                            <input type="text" name="apellido" required />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                        <label>Email
+                            <input type="email" name="email" required />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                        <label>Nombre de usuario
+                            <input name="usuario" type="text" maxlength="12" />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                        <label>Contraseña
+                            <input type="password" name="password" maxlength="12" />
+                        </label><br />
+                    </div>
+                    <div class="form-group">
+                    </div>
+                    <input class="btn" type="submit" value="Registrarse"/>	
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -102,6 +100,7 @@
         <div class="contact-info">
             <img src="img/sobre.svg" alt="Contacto">
             <p>universo.onirico@gmail.com</p>
+            <p>@2025 Juana Ferretti</p>
         </div>
     </footer>
 
